[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/texturas/lojafundo.png" type="Texture" id=1]
[ext_resource path="res://assets/fontes/flappyfont.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Ambiente/Loja.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Theme" id=7]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_focus = Color( 1, 0.560784, 0, 1 )
Button/colors/font_color_hover = Color( 1, 0.560784, 0, 1 )
Button/colors/font_color_pressed = Color( 1, 0.560784, 0, 1 )
Button/fonts/font = SubResource( 1 )
Button/styles/disabled = SubResource( 2 )
Button/styles/focus = SubResource( 3 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 5 )
Button/styles/pressed = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 25
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Loja" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Botao3" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 241.0
margin_top = 708.0
margin_right = 436.0
margin_bottom = 754.0
theme = SubResource( 7 )
text = "Comprar"

[node name="Botao2" type="Button" parent="."]
margin_left = 241.0
margin_top = 462.0
margin_right = 436.0
margin_bottom = 508.0
theme = SubResource( 7 )
text = "Comprar"

[node name="Botao1" type="Button" parent="."]
margin_left = 241.0
margin_top = 218.0
margin_right = 436.0
margin_bottom = 264.0
theme = SubResource( 7 )
text = "Comprar"

[node name="Moedas" type="Label" parent="."]
margin_left = 332.0
margin_top = 798.0
margin_right = 423.0
margin_bottom = 860.0
custom_fonts/font = SubResource( 8 )
text = "Moedas"
align = 1
valign = 1

[connection signal="pressed" from="Botao3" to="." method="_on_Botao3_pressed"]
[connection signal="pressed" from="Botao2" to="." method="_on_Botao2_pressed"]
[connection signal="pressed" from="Botao1" to="." method="_on_Botao1_pressed"]
